<resources>
    <string name="app_name">Time Manager Application</string>
    <string name="title_activity_login">LoginActivity</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="timetable_manager">Timetable Manager</string>
    <string name="string_timetable_manager">Timetable Manager</string>
    <string name="textview">TextView</string>
    <string name="Login_activity">Login</string>
    <string name="Signup_textView">SignUp</string>
    <string name="clockbackground">clockbackground</string>
    <string name="user_name_textView">User Name</string>
    <string name="email_address_textView">Email Address</string>
    <string name="password_textView">Password</string>
    <string name="forgot_password_textView">Forgot Password</string>
    <string name="getlink_textView">Get Link</string>
    <string name="enter_Email_textView">Email Address</string>
    <string name="future_task">Future Task</string>
    <string name="postponded_task">Postponded Task</string>
    <string name="goal_status">Goal Status</string>
    <string name="todo">TODO</string>
    <string name="add_new_task">Add New Task</string>
    <string name="add_task">Add Task</string>
    <string name="today">Today</string>
    <string name="task_description">Task Description</string>
    <string name="enter_name_of_task">Enter Name of Task</string>
    <string name="time">Time</string>
    <string name="date">Date</string>
    <string name="tomorrow">Tomorrow</string>
    <string name="set_reminder">Set Reminder</string>
    <string name="day">Day</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>